[tool.poetry]
name = "nl-economist"
version = "0.1.0"
description = ""
authors = ["abirukov <abirukov2008@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ipython = "^8.18.0"
isort = "^5.12.0"
flake8 = "^7.0.0"
flake8-print = "^5.0.0"
flake8-quotes = "^3.3.2"
flake8-unused-arguments = "^0.0.13"
flake8-eradicate = "^1.5.0"
flake8-commas = "^2.1.0"
mypy = "^1.7.0"
mypy-extensions = "^1.0.0"
pytest = "^7.4.2"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
pytest-env = "^1.0.1"
pytest-lazy-fixture = "^0.6.3"
pytest-randomly = "^3.15.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
